# 2022Capstone_AutoDriving

./: .gitignore  README.md  gps1.csv  gps2.csv  gps_cov_check.py  odom.launch
Lane-Detector-Node/script/: lane-detector.py  node.py
MT_Software/cat/: MFMSDK.README  MTSDK.README
MT_Software/include/: xscommon.h  xscontroller.h  xsensdeviceapi.h
MT_Software/lib/: libxsensdeviceapi.so.2021  libxstypes.so.2021  libxstypes.so.2021.4.0
adaptive_clustering/: CMakeLists.txt
adaptive_clustering/src/: adaptive_clustering.cpp  pointcloud_ROI.cpp
adaptive_clustering_v1/: CMakeLists.txt  package.xml
adaptive_clustering_v1/launch/: adaptive_clustering_v1.launch
adaptive_clustering_v1/src/: adaptive_clustering_v1.cpp
core/: CMakeLists.txt  package.xml
core/config/: dir_mode.yaml
core/launch/: core.launch  core_test.launch
core/src/: core.py  core_based_stopline.py  core_based_stopline_qualifier.py  core_based_stopline_stech.py  core_based_waypoint.py  core_based_waypoint_delivery.py  core_based_waypoint_qualifier.py  core_based_waypoint_stech.py  core_final.py  (+26 more)
final_pose/: CMakeLists.txt  package.xml
frenet_frame-and-stanley-in-rviz/: README.md
gps_cov_check/: CMakeLists.txt  package.xml
gps_to_vo/: CMakeLists.txt  package.xml
lanenet/: CMakeLists.txt  package.xml
launch/: ___launch.launch  launch.launch  package.xml
odomcov/: CMakeLists.txt  package.xml
odometry/: CMakeLists.txt  package.xml
parking_mission/: CMakeLists.txt  package.xml
peak-linux-driver-8.14.0/: Makefile
robot_pose_ekf/: robot_pose_ekf.launch
vision_msgs/: CMakeLists.txt
(+4800 files in other folders)
